vm/mlvm/anonloader/stress/byteMutation crashed on windows

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 13
    • Affects Version/s: 13
    • Component/s: hotspot
    • b09

      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # EXCEPTION_ACCESS_VIOLATION (0xc0000005) at pc=0x00007ff94e2810ee, pid=92708, tid=28300
      #
      # JRE version: Java(TM) SE Runtime Environment (13.0) (fastdebug build 13-internal+0-jdk13-jdk.381)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 13-internal+0-jdk13-jdk.381, mixed mode, sharing, tiered, compressed oops, g1 gc, windows-amd64)
      # Problematic frame:
      # C [VCRUNTIME140.dll+0x10ee]
      #
      # Core dump will be written. Default location: T:\testOutput\test-support\jtreg_open_test_hotspot_jtreg_vmTestbase_vm_mlvm\scratch\1\hs_err_pid92708.mdmp
      #
      # If you would like to submit a bug report, please visit:
      # http://bugreport.java.com/bugreport/crash.jsp
      #

      --------------- S U M M A R Y ------------

      Command Line: -Dtest.class.path.prefix=T:\testOutput\test-support\jtreg_open_test_hotspot_jtreg_vmTestbase_vm_mlvm\classes\5\vmTestbase\vm\mlvm\anonloader\stress\byteMutation\Test.d;C:\ade\mesos\work_dir\jib-master\install\jdk13-jdk.381\src.full\open\test\hotspot\jtreg\vmTestbase\vm\mlvm\anonloader\stress\byteMutation;T:\testOutput\test-support\jtreg_open_test_hotspot_jtreg_vmTestbase_vm_mlvm\classes\5\vmTestbase;T:\testOutput\test-support\jtreg_open_test_hotspot_jtreg_vmTestbase_vm_mlvm\classes\5\test\lib -Dtest.src=C:\ade\mesos\work_dir\jib-master\install\jdk13-jdk.381\src.full\open\test\hotspot\jtreg\vmTestbase\vm\mlvm\anonloader\stress\byteMutation -Dtest.src.path=C:\ade\mesos\work_dir\jib-master\install\jdk13-jdk.381\src.full\open\test\hotspot\jtreg\vmTestbase\vm\mlvm\anonloader\stress\byteMutation;C:\ade\mesos\work_dir\jib-master\install\jdk13-jdk.381\src.full\open\test\hotspot\jtreg\vmTestbase;C:\ade\mesos\work_dir\jib-master\install\jdk13-jdk.381\src.full\open\test\lib -Dtest.classes=T:\testOutput\test-support\jtreg_open_test_hotspot_jtreg_vmTestbase_vm_mlvm\classes\5\vmTestbase\vm\mlvm\anonloader\stress\byteMutation\Test.d -Dtest.class.path=T:\testOutput\test-support\jtreg_open_test_hotspot_jtreg_vmTestbase_vm_mlvm\classes\5\vmTestbase\vm\mlvm\anonloader\stress\byteMutation\Test.d;T:\testOutput\test-support\jtreg_open_test_hotspot_jtreg_vmTestbase_vm_mlvm\classes\5\vmTestbase;T:\testOutput\test-support\jtreg_open_test_hotspot_jtreg_vmTestbase_vm_mlvm\classes\5\test\lib -Dtest.vm.opts=-XX:MaxRAMPercentage=4 -Dtest.tool.vm.opts=-J-XX:MaxRAMPercentage=4 -Dtest.compiler.opts= -Dtest.java.opts=-XX:+CreateCoredumpOnCrash -ea -esa -XX:CompileThreshold=100 -XX:+UnlockExperimentalVMOptions -server -XX:+TieredCompilation -Dtest.jdk=c:\ade\mesos\work_dir\jib-master\install\jdk13-jdk.381\windows-x64-debug.jdk\jdk-13\fastdebug -Dcompile.jdk=c:\ade\mesos\work_dir\jib-master\install\jdk13-jdk.381\windows-x64-debug.jdk\jdk-13\fastdebug -Dtest.timeout.factor=4.0 -Dtest.modules=java.base/jdk.internal.misc -Dtest.nativepath=c:\ade\mesos\work_dir\jib-master\install\jdk13-jdk.381\windows-x64-debug.test\hotspot\jtreg\native --add-modules=java.base --add-exports=java.base/jdk.internal.misc=ALL-UNNAMED -XX:MaxRAMPercentage=4 -XX:+CreateCoredumpOnCrash -ea -esa -XX:CompileThreshold=100 -XX:+UnlockExperimentalVMOptions -XX:+TieredCompilation -Djava.library.path=c:\ade\mesos\work_dir\jib-master\install\jdk13-jdk.381\windows-x64-debug.test\hotspot\jtreg\native com.sun.javatest.regtest.agent.MainWrapper T:\testOutput\test-support\jtreg_open_test_hotspot_jtreg_vmTestbase_vm_mlvm\vmTestbase\vm\mlvm\anonloader\stress\byteMutation\Test.d\main.0.jta -stressIterationsFactor 100000

      Host: XXXXX, Intel(R) Xeon(R) CPU E5-2699 v3 @ 2.30GHz, 12 cores, 60G, Windows Server 2012 R2 , 64 bit Build 9600 (6.3.9600.17415)
      Time: Wed Feb 13 21:22:53 2019 Ame elapsed time: 24 seconds (0d 0h 0m 24s)

      --------------- T H R E A D ---------------

      Current thread (0x00000055dc6cf000): JavaThread "Thread-7213" daemon [_thread_in_vm, id=28300, stack(0x00000055dbe90000,0x00000055dbf90000)]

      Stack: [0x00000055dbe90000,0x00000055dbf90000], sp=0x00000055dbf8dc60, free space=1015k
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      C [VCRUNTIME140.dll+0x10ee]
      V [jvm.dll+0x49ec96] ClassFileParser::skip_over_field_signature+0x106 (classfileparser.cpp:5135)
      V [jvm.dll+0x4a0770] ClassFileParser::verify_legal_method_signature+0x1a0 (classfileparser.cpp:5343)
      V [jvm.dll+0x494d6e] ClassFileParser::parse_constant_pool+0xfae (classfileparser.cpp:773)
      V [jvm.dll+0x49bc45] ClassFileParser::parse_stream+0x465 (classfileparser.cpp:6051)
      V [jvm.dll+0x48a1f3] ClassFileParser::ClassFileParser+0x713 (classfileparser.cpp:5918)
      V [jvm.dll+0x99b5a3] KlassFactory::create_from_stream+0x1d3 (klassfactory.cpp:220)
      V [jvm.dll+0xce5949] SystemDictionary::resolve_from_stream+0x1d9 (systemdictionary.cpp:1130)
      V [jvm.dll+0x8515eb] jvm_define_class_common+0x26b (jvm.cpp:951)
      V [jvm.dll+0x85b7b1] JVM_DefineClassWithSource+0x161 (jvm.cpp:975)
      C [java.dll+0x1968]

            Assignee:
            David Holmes
            Reporter:
            Igor Ignatyev (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: