8218939: vm/mlvm/anonloader/stress/byteMutation crashed on windows

Reviewed-by: kbarrett, coleenp, mikael, iignatyev